# terraswap-classic

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build_release.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release-artifacts.yml  tests.yml
contracts/terraswap_factory/: Cargo.toml  README.md
contracts/terraswap_factory/examples/: schema.rs
contracts/terraswap_factory/schema/: config_response.json  execute_msg.json  instantiate_msg.json  pair_info.json  pairs_response.json  query_msg.json
contracts/terraswap_factory/src/: contract.rs  lib.rs  response.rs  state.rs  testing.rs
contracts/terraswap_moon/: Cargo.toml  README.md
contracts/terraswap_moon/examples/: schema.rs
contracts/terraswap_moon/schema/: execute_msg.json  instantiate_msg.json  migrate_msg.json  pair_info.json  pool_response.json  query_msg.json  simulation_response.json
contracts/terraswap_moon/src/: contract.rs  error.rs  lib.rs  response.proto  state.rs  testing.rs  util.rs
contracts/terraswap_pair/: Cargo.toml  README.md
contracts/terraswap_pair/.cargo/: config
contracts/terraswap_pair/examples/: schema.rs
contracts/terraswap_pair/schema/: cw20_hook_msg.json  execute_msg.json  instantiate_msg.json  pair_info.json  pool_response.json  query_msg.json  reverse_simulation_response.json  simulation_response.json
contracts/terraswap_pair/src/: contract.rs  error.rs  lib.rs  response.rs  state.rs  testing.rs
contracts/terraswap_router/: Cargo.toml  README.md  rustfmt.toml
contracts/terraswap_router/examples/: schema.rs
contracts/terraswap_router/schema/: config_response.json  cw20_hook_msg.json  execute_msg.json  instantiate_msg.json  query_msg.json
contracts/terraswap_router/src/: contract.rs  lib.rs  operations.rs  querier.rs  state.rs
contracts/terraswap_router/src/testing/: tests.rs
contracts/terraswap_token/: Cargo.toml  README.md
contracts/terraswap_token/examples/: schema.rs
contracts/terraswap_token/schema/: all_accounts_response.json  all_allowances_response.json  allowance_response.json  balance_response.json  cw20_execute_msg.json  instantiate_msg.json  query_msg.json  token_info_response.json
contracts/terraswap_token/src/: contract.rs
