[package]
name = "terraswap-router"
version = "0.1.0"
authors = ["Terraform Labs, PTE.", "DELIGHT LABS"]
edition = "2021"
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2 = { version = "0.14.0" }
cw20 = { version = "0.14.0" }
cosmwasm-std = { version = "1.0.0" }
classic_terraswap = { path = "../../packages/classic_terraswap", version = "2.7.0" }
classic-bindings = { version = "0.1.1" }
cw-storage-plus = { version = "1.0.0"}
integer-sqrt = "0.1.5"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-storage = { version = "1.0.0" }
cosmwasm-schema = { version = "1.0.0" }
