[package]
name = "terraswap-router"
version = "0.1.0"
authors = ["Terraform Labs, PTE.", "DELIGHT LABS"]
edition = "2021"
description = "A Terraswap router contract - provides multi-step operations to facilitate single sign operation"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
