name = "terraswap-token"
version = "0.0.0"
authors = ["Terraform Labs, PTE.", "DELIGHT LABS"]
edition = "2021"
description = "Backward compatible implementation of a CosmWasm-20 compliant token"
license = "MIT"
repository = "https://github.com/terraswap/classic_terraswap"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = { version = "0.14.0" } 
cw20 = { version = "0.14.0" } 
cw20-base = {version = "0.14.0", features = ["library"]}
cw-storage-plus  = { version = "1.0.0" }
cosmwasm-std = { version = "1.0.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
classic_terraswap = { path = "../../packages/classic_terraswap", version = "2.7.0" }

[dev-dependencies]
# we only need to enable this if we use integration tests
cosmwasm-schema = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
